--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#ffc223</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorText">#6d6b6a</color>
+
+    <color name="colorSafe">#48ff45</color>
+    <color name="colorBusy">#ff457d</color>
+    <color name="colorMiddle">#ffd060</color>
 </resources>
